--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,6 +20,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
