--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,6 +20,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment:
+      name: release
+      url: https://test.pypi.org/p/fk-graph
+
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
