--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [project]
 name = "fk-graph"
-version = "0.0.7"
+packages = ["src/fk_graph"]
+version = "0.0.8"
 authors = [
   { name="Andrew Curtis", email="fk.graph@fastmail.com" },
   { name="John C Thomas" },
