--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
+      - name: Install library
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Install library
-        run: pip install .
+          pip install .
       - name: Run tests
         run: python -m unittest
